Added an episode search

--- a/_includes/structure/footer-scripts.html
+++ b/_includes/structure/footer-scripts.html
@@ -7,4 +7,6 @@
 <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nuq92&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
 </noscript>
 <!-- End Twitter universal website tag code -->
-<script src="/js/quick-access.js"></script>
+<script type="text/javascript" src="{{ 'js/quick-access.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ 'js/azepto.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ 'js/search.js' | prepend: site.baseurl }}"></script>
