--- a/css/main.scss
+++ b/css/main.scss
@@ -21,6 +21,7 @@
 @import "modules/structure/footer";
 @import "modules/structure/cover-photo";
 @import "modules/quick-access";
+@import "modules/search";
 @import "modules/navigation/buttons";
 @import "modules/navigation/social-nav";
 @import "modules/navigation/pagination";
