--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -3,6 +3,10 @@
     Esse projeto é apoiado por mais de <span class="highlight">110 pessoas</span>
   </p>
   <a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
-    Quero apoiar esse projeto
+    Quero apoiar (Apoia.se)
+  </a>
+  <br />
+  <a href="http://bit.ly/dne-padrim" class="btn" target="_blank">
+    Quero apoiar (Padrim)
   </a>
 </section>
