--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -11,11 +11,13 @@
 				<a href="{{ "comunidades" | prepend: site.baseurl }}" class="header-nav-link">Comunidades</a>
 			</li>
 			<li>
-				<a href="https://apoia.se/devnaestrada/supports" class="header-nav-link" target="_blank">Apoiadores</a>
+				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Apoiar pelo Apoia.se</a>
+			</li>
+			<li>
+				<a href="http://bit.ly/dne-padrim" class="header-nav-link btn" target="_blank">Apoiar pelo Padrim</a>
 			</li>
 		</ul>
 	</nav>
-	<a href="http://bit.ly/dne-apoiase" class="header-support btn" target="_blank">Quero Apoiar</a>
 	<a href="http://bit.ly/dne-github" class="header-github" target="_blank">
 		<img class="header-github-image" src="{{ "public/assets/img/fork-me.png" | prepend: site.baseurl }}" alt="Fork me on Github" />
 	</a>
