--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@
 @import "modules/episodes";
 @import "modules/episode";
 @import "modules/community";
+@import "modules/feedback";
 
 // layout
 @import "layout/structure";
