--- a/_includes/modules/post-extras.html
+++ b/_includes/modules/post-extras.html
@@ -6,6 +6,8 @@
 
 {% include modules/post-participants.html %}
 
+{% include modules/feedback.html %}
+
 {% include modules/post-links.html %}
 
 {% include modules/sponsors.html %}
