Ajusta botões de apoio do header no mobile
Quando em resolução mobile, centraliza os botões e ajusta o
espaçamento vertical entre eles.

Foi adicionada uma classe de wrap nos <li /> do .header-nav para
transforma-los em elementos de bloco.

--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -10,10 +10,10 @@
 			<li>
 				<a href="{{ "comunidades" | prepend: site.baseurl }}" class="header-nav-link">Comunidades</a>
 			</li>
-			<li>
+			<li class="header-nav-btn-wrap">
 				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Apoiar pelo Apoia.se</a>
 			</li>
-			<li>
+			<li class="header-nav-btn-wrap">
 				<a href="http://bit.ly/dne-padrim" class="header-nav-link btn" target="_blank">Apoiar pelo Padrim</a>
 			</li>
 		</ul>
