--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -5,7 +5,7 @@ $neutral: gray !default;
 $neutral-light: #e2e2e2 !default;
 
 // core colors
-$primary-color: #e67e22 !default;
+$primary-color: #E91E63 !default;
 
 // base colors
 $link-color: #21272d !default;
