Change layout, remove profile and add profile inside footer

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,5 +1,18 @@
 <footer>
-	<p class="footer-text">
-		Esse projeto é feito com <i class="fa fa-heart"></i> por <a href="http://www.twitter.com/femontanha">@femontanha</a> e <a href="http://twitter.com/raymonsanches">@raymonsanches</a>
-	</p>
+	<section class="profile">
+		<figure class="profile__image profile__image--femontanha"></figure>
+		<span class="profile__name">Fellipe Azambuja</span>
+		<span class="profile__role">Host & Front-end Developer</span>
+		<div class="profile__twitter">
+			<a href="https://twitter.com/femontanha" class="twitter-follow-button" data-show-count="false">Follow @femontanha</a>
+		</div>
+	</section>
+	<section class="profile">
+		<figure class="profile__image profile__image--raymon"></figure>
+		<span class="profile__name">Ramon Sanches</span>
+		<span class="profile__role">Co-Host e PHP FullStack Developer</span>
+		<div class="profile__twitter">
+			<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">Follow @raymonsanches</a>
+		</div>
+	</section>
 </footer>
