--- a/_includes/structure/head.html
+++ b/_includes/structure/head.html
@@ -54,9 +54,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="{{ "public/assets/img/favicon/favicon-96x96.png" | prepend: site.baseurl }}">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "public/assets/img/favicon/favicon-16x16.png" | prepend: site.baseurl }}">
   <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#e67e22">
   <meta name="msapplication-TileImage" content="{{ "public/assets/img/favicon/ms-icon-144x144.png" | prepend: site.baseurl }}">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#e67e22">
 
   <!-- Google Analytics -->
   {% if site.google_analytics %}
