--- a/public/assets/scss/modules/_quick-access.scss
+++ b/public/assets/scss/modules/_quick-access.scss
@@ -2,40 +2,15 @@
 // name: Quick Access
 ////////////////////////////////
 
-.quick-access {
-  padding: rem(15);
-  margin-bottom: rem(30);
-  border-bottom: $footerColor 1px solid;
-}
-
-.quick-access-title {
-  font-size: rem(16);
-  display: block;
-  vertical-align: middle;
-  width: rem(120);
-
-  @media screen and (min-width: $notebook) {
-    display: inline-block;
-  }
-}
-
-.filter-form, #search-form {
-  display: inline-block;
-}
-
 #search-form {
   position: relative;
-  float: none;
-  margin-top: 1em;
-
-  @media screen and (min-width: $notebook) {
-    float: right;
-    margin-top: 0;
-  }
+  display: block;
+  max-width: rem(710);
+  margin: rem(30) auto 0;
 }
 
 #search-input {
-  padding-left: rem(10) !important;
+  padding-left: rem(10);
 }
 
 #search-icon {
@@ -46,25 +21,11 @@
   cursor: pointer;
 }
 
-.filter-select, #search-input {
+#search-input {
   font-size: rem(16);
   background-color: $ligten;
   border: $neutral 1px solid;
   height: 40px;
   outline: $neutral;
   width: 100%;
-
-  @media screen and (min-width: $tablet) {
-    width: 250px;
-  }
-}
-
-.filter-btn {
-  display: inline-block;
-  margin-top: rem(15);
-
-  @media screen and (min-width: $tablet) {
-    margin-top: 0;
-    margin-left: rem(15);
-  }
 }
