--- a/public/assets/scss/modules/_search.scss
+++ b/public/assets/scss/modules/_search.scss
@@ -5,9 +5,9 @@
   box-shadow: 2px 6px 20px 0 #333;
   padding-left: 15px;
   margin-top: 0px;
-  width: rem(500);
+  width: 100%;
   padding-bottom: 10px;
-  right: 0;
+  left: 0;
 
   .entry-date {
     font-size: 12px;
@@ -17,10 +17,6 @@
   li {
     list-style: none;
     padding: 3px 0;
-
-    a:hover {
-      border-bottom: 2px solid #e67e22;
-    }
   }
 }
 
