Fix footer and header

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -1,18 +1,20 @@
 <footer>
-	<section class="profile">
-		<figure class="profile__image profile__image--femontanha"></figure>
-		<span class="profile__name">Fellipe Azambuja</span>
-		<span class="profile__role">Host & Front-end Developer</span>
-		<div class="profile__twitter">
-			<a href="https://twitter.com/femontanha" class="twitter-follow-button" data-show-count="false">Follow @femontanha</a>
-		</div>
-	</section>
-	<section class="profile">
-		<figure class="profile__image profile__image--raymon"></figure>
-		<span class="profile__name">Ramon Sanches</span>
-		<span class="profile__role">Co-Host e PHP FullStack Developer</span>
-		<div class="profile__twitter">
-			<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">Follow @raymonsanches</a>
-		</div>
-	</section>
+	<div class="container">
+		<section class="profile">
+			<figure class="profile__image profile__image--femontanha"></figure>
+			<span class="profile__name">Fellipe Azambuja</span>
+			<span class="profile__role">Host & Front-end Developer</span>
+			<div class="profile__twitter">
+				<a href="https://twitter.com/femontanha" class="twitter-follow-button" data-show-count="false">Follow @femontanha</a>
+			</div>
+		</section>
+		<section class="profile">
+			<figure class="profile__image profile__image--raymon"></figure>
+			<span class="profile__name">Ramon Sanches</span>
+			<span class="profile__role">Co-Host e PHP FullStack Developer</span>
+			<div class="profile__twitter">
+				<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">Follow @raymonsanches</a>
+			</div>
+		</section>
+	</div>
 </footer>
