--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -5,13 +5,13 @@
 	<nav class="header-nav">
 		<ul>
 			<li>
-				<a href="{{ "comunidades" | prepend: site.baseurl }}" class="header-nav-link">Comunidades</a>
+				<a href="{{ "comunidades" | prepend: site.baseurl }}" class="header-nav-link btn">Comunidades</a>
 			</li>
-			<li class="header-nav-btn-wrap">
-				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Apoiar pelo Apoia.se</a>
+			<li>
+				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Apoia.se</a>
 			</li>
-			<li class="header-nav-btn-wrap">
-				<a href="http://bit.ly/dne-padrim" class="header-nav-link btn" target="_blank">Apoiar pelo Padrim</a>
+			<li>
+				<a href="http://bit.ly/dne-padrim" class="header-nav-link btn" target="_blank">Padrim</a>
 			</li>
 		</ul>
 	</nav>
