Add artwork on index feed

--- a/public/assets/scss/modules/_episode.scss
+++ b/public/assets/scss/modules/_episode.scss
@@ -11,6 +11,17 @@
   margin: 0 0 rem(10);
 }
 
+.episode-holder,
+.episode-link,
+.episode-description {
+  overflow: hidden;
+}
+
+.episode-artwork {
+  float: left;
+  margin-right: rem(10);
+}
+
 .episode-link {
   display: block;
   text-decoration: none;
