update header nav

--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -2,6 +2,10 @@
 	<a href="/" class="header-brand">
 		<img src="{{ "public/assets/img/devnaestrada.png" | prepend: site.baseurl }}" alt="DEVNAESTRADA logo" />
 	</a>
+
+	<label for="nav-btn" class="fa fa-bars nav-label" aria-hidden="true"></label>
+	<input id="nav-btn" class="nav-btn" type="checkbox">
+
 	<nav class="header-nav">
 		<ul>
 			<li>
