ADD DNE 99 Contact Page Remove Padrim service

--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -3,10 +3,6 @@
     Esse projeto é apoiado por mais de <span class="highlight">110 pessoas</span>
   </p>
   <a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
-    Quero apoiar (Apoia.se)
-  </a>
-  <br />
-  <a href="http://bit.ly/dne-padrim" class="btn" target="_blank">
-    Quero apoiar (Padrim)
+    Doar/Apoiar o DNE
   </a>
 </section>
