--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -12,10 +12,10 @@
 				<a href="{{ "comunidades" | prepend: site.baseurl }}" class="header-nav-link btn">Comunidades</a>
 			</li>
 			<li>
-				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Apoia.se</a>
+				<a href="{{ "contato" | prepend: site.baseurl }}" class="header-nav-link btn">Contato</a>
 			</li>
 			<li>
-				<a href="http://bit.ly/dne-padrim" class="header-nav-link btn" target="_blank">Padrim</a>
+				<a href="http://bit.ly/dne-apoiase" class="header-nav-link btn" target="_blank">Doar/Apoiar o DNE</a>
 			</li>
 		</ul>
 	</nav>
