update contact form DNE Pocket 04

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,6 +37,7 @@
 @import "modules/episode";
 @import "modules/community";
 @import "modules/feedback";
+@import "modules/form";
 
 // layout
 @import "layout/structure";
