--- a/_includes/modules/feedback.html
+++ b/_includes/modules/feedback.html
@@ -1,9 +1,8 @@
-<section class="feedback">
-  <h2 class="feedback-title">
+<section>
+  <h2>
     DNE Feedback
   </h2>
   <p class="feedback-content">
-    Mande um whatsapp áudio para:
+    Mande um whatsapp áudio para: <a href="tel:+5519981952836">+55 (19) 98195-2836</a>
   </p>
-  <img class="image-adap" src="{{ "public/assets/img/dne-feedback.jpg" | prepend: site.baseurl }}" alt="Feedback DNE" />
 </section>
