--- a/_includes/modules/post-links.html
+++ b/_includes/modules/post-links.html
@@ -1,6 +1,6 @@
 {% if page.links %}
-  <section class="post-links">
-    <h2 class="post-links-title">Comentados nesse Episódio</h2>
+  <section>
+    <h2>Comentados nesse Episódio</h2>
     <ul>
       {% for link in page.links %}
         <li>
