--- a/_includes/modules/post-participants.html
+++ b/_includes/modules/post-participants.html
@@ -1,16 +1,15 @@
 {% if page.participants %}
   <section class="post-participants">
     {% if page.participants.size > 1 %}
-      <h2 class="post-participants-title">Participantes</h2>
+      <h2>Participantes</h2>
     {% else %}
-      <h2 class="post-participants-title">Participante</h2>
+      <h2>Participante</h2>
     {% endif %}
     <ul>
       {% for participant in page.participants %}
         <li>
-          <img src="https://twitter.com/{{ participant.twitter }}/profile_image?size=bigger">
-          <h3>{{ participant.name }}</h3>
-          <a href="http://twitter.com/{{ participant.twitter }}" class="post-links-link twitter" target="_blank">@{{ participant.twitter }}</a>
+          {{ participant.name }}<br />
+          <a href="http://twitter.com/{{ participant.twitter }}" class="post-links twitter" target="_blank">@{{ participant.twitter }}</a>
         </li>
       {% endfor %}
     </ul>
