--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -1,8 +1,8 @@
 <section class="post-support">
   <p>
-    Esse projeto é apoiado por mais de <span class="highlight">110 pessoas</span>
+    Esse projeto é apoiado por mais de <span class="highlight">100 pessoas</span>
   </p>
   <a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
-    Doar/Apoiar o DNE
+    Quero Apoiar
   </a>
 </section>
