--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -1,11 +1,13 @@
-<section class="post-links">
-  <h2 class="post-links-title">Nossos Apoios:</h2>
+<section>
+  <h2>Nossos Apoios:</h2>
   <ul>
     <li>
-      <a href="http://bit.ly/dne-contratado" class="post-links-link contratado" target="_blank">Contratado.me</a> Você encontra seu emprego novo, grátis e 100% online.
+      <a href="http://bit.ly/dne-contratado" class="post-links contratado" target="_blank">Contratado.me</a><br />
+      Você encontra seu emprego novo, grátis e 100% online.
     </li>
     <li>
-      <a href="http://bit.ly/dne-alura" class="post-links-link alura" target="_blank">Alura.com.br</a> Cursos online de programação, design, mobile e muito mais!
+      <a href="http://bit.ly/dne-alura" class="post-links alura" target="_blank">Alura.com.br</a><br />
+      Cursos online de programação, design, mobile e muito mais!
     </li>
   </ul>
 </section>
