update new member

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -16,5 +16,13 @@
 				<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">Follow @raymonsanches</a>
 			</div>
 		</section>
+		<section class="profile">
+			<figure class="profile__image profile__image--edu"></figure>
+			<span class="profile__name">Eduardo Matos</span>
+			<span class="profile__role">FullStack Developer</span>
+			<div class="profile__twitter">
+				<a href="https://twitter.com/eduardojmatos" class="twitter-follow-button" data-show-count="false">Follow @eduardojmatos</a>
+			</div>
+		</section>
 	</div>
 </footer>
