--- a/public/assets/scss/modules/structure/_footer.scss
+++ b/public/assets/scss/modules/structure/_footer.scss
@@ -32,6 +32,10 @@ footer {
   &.profile__image--raymon {
     background-image: url('http://pbs.twimg.com/profile_images/815923259422244864/EZs8WgQ3.jpg');
   }
+
+  &.profile__image--edu {
+    background-image: url('https://pbs.twimg.com/profile_images/807681794296475648/w0uI1vj__400x400.jpg');
+  }
 }
 
 .profile__name,
