Change "Ramon Sanches" job description

--- a/_includes/structure/footer.html
+++ b/_includes/structure/footer.html
@@ -11,7 +11,7 @@
 		<section class="profile">
 			<figure class="profile__image profile__image--raymon"></figure>
 			<span class="profile__name">Ramon Sanches</span>
-			<span class="profile__role">Co-Host e PHP FullStack Developer</span>
+			<span class="profile__role">Co-Host & Senior PHP Developer</span>
 			<div class="profile__twitter">
 				<a href="https://twitter.com/raymonsanches" class="twitter-follow-button" data-show-count="false">Follow @raymonsanches</a>
 			</div>
