Add next events inside Post Extras

--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -1,8 +1,20 @@
-<section class="post-links">
-  <h2 class="post-links-title">Vamos fazer Network?</h2>
+<section>
+  <h2>Eventos Próximos</h2>
   <ul>
     <li>
-      <a href="http://bit.ly/dne-phpeste2016" class="post-links-link" target="_blank">PHPeste</a> é a melhor conferência de PHP organizada pelas comunidades "cabra da peste" no Nordeste Brasileiro. Venha prestigiar esse grande evento que esse ano acontecerá em Salvador (BA).
+      <a href="http://reactconfbr.com.br/" class="post-links-link" target="_blank">
+        ReactConfBR
+      </a>
+    </li>
+    <li>
+      <a href="http://eventos.locaweb.com.br/proximos-eventos/php-community-summit-by-locaweb/" class="post-links-link" target="_blank">
+        PHP Community Summit
+      </a>
+    </li>
+    <li>
+      <a href="http://www.theconf.club/" class="post-links-link" target="_blank">
+        THECONF
+      </a>
     </li>
   </ul>
 </section>
