- Ading DNE 116 - Changing "Next Events" title

--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -1,5 +1,5 @@
 <section>
-  <h2>Eventos Próximos</h2>
+  <h2>Próximos Eventos</h2>
   <ul>
     <li>
       <a href="http://reactconfbr.com.br/" class="post-links-link" target="_blank">
