--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -16,5 +16,10 @@
         THECONF
       </a>
     </li>
+    <li>
+      <a href="http://frontinvale.com.br/" class="post-links-link" target="_blank">
+        Front In Vale
+      </a>
+    </li>
   </ul>
 </section>
