--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ layout: default
 
   <div class="post-cast__content">
     <div class="post-cast__content__audio">
-      {% include vendor/soundcloud.html %}
+      {% include vendor/libsyn.html %}
     </div>
     {{ content }}
   </div>
