--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -5,5 +5,5 @@
   <a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
     Quero Apoiar
   </a>
-  <img style="max-width: 320px; margin-top: 15px;" src="{{ "public/assets/img/picpay.jpg" | prepend: site.baseurl }}" alt="Doações para Picpay @femontanha" />
+  <img style="max-width: 320px; margin-top: 15px;" src="http://devnaestrada.com.br/public/assets/img/picpay.jpg" alt="Doações para Picpay @femontanha" />
 </section>
