--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -21,5 +21,10 @@
         Front In Vale
       </a>
     </li>
+    <li>
+      <a href="http://2017.pythonbrasil.org.br/" class="post-links-link" target="_blank">
+        Python Brasil [13]
+      </a>
+    </li>
   </ul>
 </section>
