--- a/_includes/modules/partners.html
+++ b/_includes/modules/partners.html
@@ -13,5 +13,10 @@
         <img class="image-adap" src="{{ "public/assets/img/partners/alura.png" | prepend: site.baseurl }}" alt="Logo da empresa Alura" />
       </a>
     </li>
+    <li>
+      <a href="http://bit.ly/dne-magnetis" class="partners-link" target="_blank">
+        <img class="image-adap" src="{{ "public/assets/img/partners/magnetis.png" | prepend: site.baseurl }}" alt="Logo da Magnetis" />
+      </a>
+    </li>
   </ul>
 </section>
