--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -2,6 +2,10 @@
   <h2>Nossos Apoios:</h2>
   <ul>
     <li>
+      <a href="http://bit.ly/dne-magnetis" class="post-links magnetis" target="_blank">Magnetis.com.br</a><br />
+      Investimentos sob medida para seus sonhos | Magnetis
+    </li>
+    <li>
       <a href="http://bit.ly/dne-contratado" class="post-links contratado" target="_blank">Contratado.me</a><br />
       Você encontra seu emprego novo, grátis e 100% online.
     </li>
