--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -27,6 +27,7 @@ $contratadome: #323a45 !default;
 $vanhack: #0077e0 !default;
 $alura: #fdc14a !default;
 $stickersdevs: #579fd6 !default;
+$magnetis: #3DCA9C !default;
 
 // participants
 $twitter: #00aced !default;
