--- a/public/assets/scss/modules/_post-links-sponsors.scss
+++ b/public/assets/scss/modules/_post-links-sponsors.scss
@@ -54,6 +54,15 @@
   }
 }
 
+.post-links.magnetis {
+  background-color: $magnetis;
+
+  &:hover {
+    background-color: transparent;
+    color: $magnetis;
+  }
+}
+
 .post-links.twitter {
   background-color: $twitter;
 
