--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -26,5 +26,15 @@
         Python Brasil [13]
       </a>
     </li>
+    <li>
+      <a href="https://phpeste.net/" class="post-links-link" target="_blank">
+        PHPeste - 20% - DEV-NA-ESTRADA-DO-PHPESTE
+      </a>
+    </li>
+    <li>
+      <a href="http://2017.abcdevelopers.org" class="post-links-link" target="_blank">
+        ABC-DEV
+      </a>
+    </li>
   </ul>
 </section>
