- New episode - Moving events

--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -1,40 +1,48 @@
 <section>
   <h2>Próximos Eventos</h2>
   <ul>
-    <li>
-      <a href="http://reactconfbr.com.br/" class="post-links-link" target="_blank">
-        ReactConfBR
-      </a>
-    </li>
-    <li>
-      <a href="http://eventos.locaweb.com.br/proximos-eventos/php-community-summit-by-locaweb/" class="post-links-link" target="_blank">
-        PHP Community Summit
-      </a>
-    </li>
+
     <li>
       <a href="http://www.theconf.club/" class="post-links-link" target="_blank">
-        THECONF
+        THE CONF
       </a>
     </li>
+
     <li>
-      <a href="http://frontinvale.com.br/" class="post-links-link" target="_blank">
-        Front In Vale
+      <a href="https://www.frontinbh.com.br/" class="post-links-link" target="_blank">
+        FrontInBH
       </a>
     </li>
+
+    <li>
+      <a href="http://reactconfbr.com.br/" class="post-links-link" target="_blank">
+        React Conf BR
+      </a>
+    </li>
+
     <li>
       <a href="http://2017.pythonbrasil.org.br/" class="post-links-link" target="_blank">
         Python Brasil [13]
       </a>
     </li>
+
     <li>
       <a href="https://phpeste.net/" class="post-links-link" target="_blank">
-        PHPeste - 20% - DEV-NA-ESTRADA-DO-PHPESTE
+        PHPeste
       </a>
     </li>
+
     <li>
-      <a href="http://2017.abcdevelopers.org" class="post-links-link" target="_blank">
-        ABC-DEV
+      <a href="http://2017.abcdevelopers.org " class="post-links-link" target="_blank">
+        ABC Developers
       </a>
     </li>
+
+    <li>
+      <a href="http://riosulvalley.com.br/devsummit " class="post-links-link" target="_blank">
+        RSV DEV SUMMIT
+      </a>
+    </li>
+
   </ul>
 </section>
