DNE 127 Add new partner and sponsor Bluesoft Remove whatsapp number Change Title for Posts Links

--- a/_includes/modules/post-links.html
+++ b/_includes/modules/post-links.html
@@ -1,6 +1,6 @@
 {% if page.links %}
   <section>
-    <h2>Comentados nesse Episódio</h2>
+    <h2>Show notes</h2>
     <ul>
       {% for link in page.links %}
         <li>
