--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -13,5 +13,9 @@
       <a href="http://bit.ly/dne-alura" class="post-links alura" target="_blank">Alura.com.br</a><br />
       Cursos online de programação, design, mobile e muito mais!
     </li>
+    <li>
+      <a href="http://bit.ly/dne-bluesoft" class="post-links bluesoft" target="_blank">Bluesoft (Carreiras.blue)</a><br />
+      Bluesoft - Empresa sensacional de tecnologia para você trabalhar
+    </li>
   </ul>
 </section>
