--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -28,6 +28,7 @@ $vanhack: #0077e0 !default;
 $alura: #fdc14a !default;
 $stickersdevs: #579fd6 !default;
 $magnetis: #3DCA9C !default;
+$bluesoft: #1E8BC9 !default;
 
 // participants
 $twitter: #00aced !default;
