--- a/_includes/modules/partners.html
+++ b/_includes/modules/partners.html
@@ -18,5 +18,10 @@
         <img class="image-adap" src="{{ "public/assets/img/partners/magnetis.png" | prepend: site.baseurl }}" alt="Logo da Magnetis" />
       </a>
     </li>
+    <li>
+      <a href="http://bit.ly/dne-bluesoft" class="partners-link" target="_blank">
+        <img class="image-adap" src="{{ "public/assets/img/partners/bluesoft.png" | prepend: site.baseurl }}" alt="Logo da Bluesoft" />
+      </a>
+    </li>
   </ul>
 </section>
