Change contratado.me for revelo Add new event

--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -6,16 +6,16 @@
       Investimentos sob medida para seus sonhos | Magnetis
     </li>
     <li>
-      <a href="http://bit.ly/dne-contratado" class="post-links contratado" target="_blank">Contratado.me</a><br />
-      Você encontra seu emprego novo, grátis e 100% online.
-    </li>
-    <li>
       <a href="http://bit.ly/dne-alura" class="post-links alura" target="_blank">Alura.com.br</a><br />
       Cursos online de programação, design, mobile e muito mais!
     </li>
     <li>
       <a href="http://bit.ly/dne-bluesoft" class="post-links bluesoft" target="_blank">Bluesoft (Carreiras.blue)</a><br />
       Bluesoft - Empresa sensacional de tecnologia para você trabalhar
+    </li>
+    <li>
+      <a href="http://bit.ly/dne-revelo" class="post-links revelo" target="_blank">Revelo.com.br</a><br />
+      Você encontra seu emprego novo, grátis e 100% online.
     </li>
   </ul>
 </section>
