--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -23,8 +23,7 @@ $post-meta-color: #848484 !default;
 $post-hr-color: #ddd !default;
 
 // sponsors
-$contratadome: #323a45 !default;
-$vanhack: #0077e0 !default;
+$revelo: #293b50 !default;
 $alura: #fdc14a !default;
 $stickersdevs: #579fd6 !default;
 $magnetis: #3DCA9C !default;
