--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -1,12 +1,15 @@
 <section>
   <h2>Próximos Eventos</h2>
   <ul>
-
     <li>
-      <a href="http://riosulvalley.com.br/devsummit " class="post-links-link" target="_blank">
+      <a href="http://lwgo.to/rubyconfdne" class="post-links-link" target="_blank">
+        Ruby Conf (30% de desconto use o código PRCDNE)
+      </a>
+    </li>
+    <li>
+      <a href="http://riosulvalley.com.br/devsummit" class="post-links-link" target="_blank">
         RSV DEV SUMMIT
       </a>
     </li>
-
   </ul>
 </section>
