--- a/_includes/modules/partners.html
+++ b/_includes/modules/partners.html
@@ -4,11 +4,6 @@
       Projeto apoiado pelas empresas
     </li>
     <li>
-      <a href="http://bit.ly/dne-contratado" class="partners-link" target="_blank">
-        <img class="image-adap" src="{{ "public/assets/img/partners/contratadome.png" | prepend: site.baseurl }}" alt="Logo da empresa Contratado.me" />
-      </a>
-    </li>
-    <li>
       <a href="http://bit.ly/dne-alura" class="partners-link" target="_blank">
         <img class="image-adap" src="{{ "public/assets/img/partners/alura.png" | prepend: site.baseurl }}" alt="Logo da empresa Alura" />
       </a>
@@ -21,6 +16,11 @@
     <li>
       <a href="http://bit.ly/dne-bluesoft" class="partners-link" target="_blank">
         <img class="image-adap" src="{{ "public/assets/img/partners/bluesoft.png" | prepend: site.baseurl }}" alt="Logo da Bluesoft" />
+      </a>
+    </li>
+    <li>
+      <a href="http://bit.ly/dne-revelo" class="partners-link" target="_blank">
+        <img class="image-adap" src="{{ "public/assets/img/partners/revelo.png" | prepend: site.baseurl }}" alt="Logo da empresa Revelo.com.br" />
       </a>
     </li>
   </ul>
