--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -1,9 +1,6 @@
 <section class="post-support">
-  <p>
-    Esse projeto é apoiado por mais de <span class="highlight">100 pessoas</span>
-  </p>
-  <a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
-    Quero Apoiar
+  <a href="http://bit.ly/dne-apoiase" target="_blank">
+    <img style="max-width: 320px; margin-top: 15px;" src="http://devnaestrada.com.br/public/assets/img/picpay.jpg" alt="apoia.se/devnaestrada" />
   </a>
   <img style="max-width: 320px; margin-top: 15px;" src="http://devnaestrada.com.br/public/assets/img/picpay.jpg" alt="Doações para Picpay @femontanha" />
 </section>
